started style sheet

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- HEADER & NAV -->
     <header>
-        <h1>Taylor Keltgen</h1>
+        <h1>Portfolio</h1>
         <nav>
             <ul>
                 <li><a href="#about-me">About Me</a></li>
@@ -20,39 +20,46 @@
             </ul>
         </nav>
     </header>  
+
     <!-- HERO BANNER -->
     <section class="hero">
-        <h2>Check out my Portfolio!</h2>
+        <h1>Taylor Keltgen</h1>
     </section>
+
     <!-- ABOUT ME SECTION -->
-    <section id="about-me">
+    <section id="about-me" class="container">
         <div>
-            <h2 class="section-title">About Me</h2>
+            <h2 class="title">About Me</h2>
         </div>
-        <div>
+        <div class="container-info">
             <div>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe atque sapiente cupiditate laborum laudantium itaque, eligendi non ad consequatur illo soluta commodi quis eaque! Nostrum consequuntur aperiam impedit tempora minima!</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe atque sapiente cupiditate laborum laudantium itaque, eligendi non ad consequatur illo soluta commodi quis eaque! Nostrum consequuntur aperiam impedit tempora minima! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi illo non quaerat, doloribus porro cupiditate, commodi itaque amet, ducimus rerum voluptatem est odit eius veritatis labore numquam? Itaque, et nisi.</p>
+                <br>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe atque sapiente cupiditate laborum laudantium itaque, eligendi non ad consequatur illo soluta commodi quis eaque! Nostrum consequuntur aperiam impedit tempora minima! Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam dignissimos cumque molestiae dolore. In iste eius vel facere, id dicta expedita fuga maiores libero. Delectus voluptatum numquam architecto! Consectetur, soluta.</p>
             </div>
             <div>
-                <img src="#" alt="portrait of Taylor">
+                <img src="./assets/images/20210810_174803.jpg" alt="portrait of Taylor"
+                width="800px"
+                >
             </div>
         </div>
     </section>
+
     <!-- MY WORK SECTION -->
-    <section id="my-work">
+    <section id="my-work" class="container">
         <div>
-            <h2 class="section-title">My Work</h2>
+            <h2 class="title">My <br> Work</h2>
         </div>
-        <div>
+        <div class="container-info">
             <div class="first-project">
-                <img src="#" alt="first project">
+                <img src="./assets/images/run-buddy-ref.png" alt="first project">
                 <div>
                     <h3>Run Buddy</h3>
                     <h4>HTML / CSS</h4>
                 </div>
             </div>
             <div class="second-project">
-                <img src="#" alt="second project">
+                <img src="./assets/images/robot-gladiator-ref.jpeg" alt="second project">
                 <div>
                     <h3>Robot Gladiator</h3>
                     <h4>JavaScript</h4>
@@ -82,11 +89,11 @@
         </div>
     </section>
     <!-- CONTACT ME SECTION -->
-    <footer id="contact-me">
+    <footer id="contact-me" class="container">
         <div>
-            <h2 class="section-title">Contact Me</h2>
+            <h2 class="title">Contact <br> Me</h2>
         </div>
-        <nav>
+        <nav class="container-info">
             <ul>
                 <li><a href="#"></a>Phone</li>
                 <li><a href="#"></a>Email</li>
