--- a/index.html
+++ b/index.html
@@ -50,40 +50,36 @@
         <div>
             <h2 class="title">My <br> Work</h2>
         </div>
-        <div class="container-info">
-            <div class="first-project">
-                <img src="./assets/images/run-buddy-ref.png" alt="first project">
+        <div class="work-info">
+            <div class="first-project project" >
+                <a href="https://taylorkeltgen.github.io/run-buddy/" target="_blank"></a>
                 <div>
-                    <h3>Run Buddy</h3>
-                    <h4>HTML / CSS</h4>
+                    <h2>Run Buddy</h2>
+                    <p>HTML / CSS</p>
                 </div>
             </div>
-            <div class="second-project">
-                <img src="./assets/images/robot-gladiator-ref.jpeg" alt="second project">
+            <div class="second-project project">
                 <div>
-                    <h3>Robot Gladiator</h3>
-                    <h4>JavaScript</h4>
+                    <h2>Robot Gladiator</h2>
+                    <p>JavaScript</p>
                 </div>
             </div>
-            <div class="third-project">
-                <img src="#" alt="third project">
+            <div class="third-project project">
                 <div>
-                    <h3>TBD</h3>
-                    <h4>Pending</h4>
+                    <h2>TBD</h2>
+                    <p>Pending</p>
                 </div>
             </div>
-            <div class="fourth-project">
-                <img src="#" alt="fourth project">
+            <div class="fourth-project project">
                 <div>
-                    <h3>TBD</h3>
-                    <h4>Pending</h4>
+                    <h2>TBD</h2>
+                    <p>Pending</p>
                 </div>
             </div>
-            <div class="fifth-project">
-                <img src="#" alt="fifth project">
+            <div class="fifth-project project">
                 <div>
-                    <h3>TBD</h3>
-                    <h4>Pending</h4>
+                    <h2>TBD</h2>
+                    <p>Pending</p>
                 </div>
             </div>
         </div>
@@ -93,12 +89,12 @@
         <div>
             <h2 class="title">Contact <br> Me</h2>
         </div>
-        <nav class="container-info">
+        <nav class="container-info contacts">
             <ul>
-                <li><a href="#"></a>Phone</li>
-                <li><a href="#"></a>Email</li>
-                <li><a href="#"></a>GitHub</li>
-                <li><a href="#"></a>Socials</li>
+                <li><a href="tel.512.992.9057">(512) 992-9057</a></li>
+                <li><a href="mailto://taylorkeltgen@gmail.com">taylorkeltgen@gmail.com</a></li>
+                <li><a href="https://github.com/" target="_blank">GitHub</a></li>
+                <li><a href="https://twitter.com/" target="_blank">Socials</a></li>
             </ul>
         </nav>
     </footer>
