positioned work items and added hover feature

--- a/index.html
+++ b/index.html
@@ -51,35 +51,47 @@
             <h2 class="title">My <br> Work</h2>
         </div>
         <div class="work-info">
-            <div class="first-project project" >
-                <a href="https://taylorkeltgen.github.io/run-buddy/" target="_blank"></a>
+            <div class="first-project project-main" >
                 <div>
-                    <h2>Run Buddy</h2>
-                    <p>HTML / CSS</p>
+                    <a href="https://taylorkeltgen.github.io/run-buddy/" target="_blank">
+                        <h2>Run Buddy</h2>
+                        <p>HTML / CSS</p>
+                    </a>
                 </div>
             </div>
-            <div class="second-project project">
-                <div>
-                    <h2>Robot Gladiator</h2>
-                    <p>JavaScript</p>
+            <div>
+                <div class="second-project project-secondary">
+                    <div>
+                        <a href="https://taylorkeltgen.github.io/robot-gladiators/" target="_blank">
+                            <h2>Robot Gladiator</h2>
+                            <p>JavaScript</p>
+                        </a>
+                        
+                    </div>
                 </div>
-            </div>
-            <div class="third-project project">
-                <div>
-                    <h2>TBD</h2>
-                    <p>Pending</p>
+                <div class="third-project project-secondary">
+                    <div>
+                        <a href="#">
+                            <h2>TBD</h2>
+                            <p>Pending</p>
+                        </a>
+                    </div>
                 </div>
-            </div>
-            <div class="fourth-project project">
-                <div>
-                    <h2>TBD</h2>
-                    <p>Pending</p>
+                <div class="fourth-project project-secondary">
+                    <div>
+                        <a href="#">
+                            <h2>TBD</h2>
+                            <p>Pending</p>
+                        </a>
+                    </div>
                 </div>
-            </div>
-            <div class="fifth-project project">
-                <div>
-                    <h2>TBD</h2>
-                    <p>Pending</p>
+                <div class="fifth-project project-secondary">
+                    <div>
+                        <a href="#">
+                            <h2>TBD</h2>
+                            <p>Pending</p>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
