--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
     <!-- MY WORK SECTION -->
     <section id="my-work" class="container">
         <div>
-            <h2 class="title">My <br> Work</h2>
+            <h2 class="title">My Work</h2>
         </div>
         <div class="work-info">
-            <div class="first-project project-main" >
+            <div class="first-project project-main bg-img">
                 <div>
                     <a href="https://taylorkeltgen.github.io/run-buddy/" target="_blank">
                         <h2>Run Buddy</h2>
@@ -60,7 +60,7 @@
                 </div>
             </div>
             <div>
-                <div class="second-project project-secondary">
+                <div class="second-project project-secondary bg-img">
                     <div>
                         <a href="https://taylorkeltgen.github.io/robot-gladiators/" target="_blank">
                             <h2>Robot Gladiator</h2>
@@ -69,7 +69,7 @@
                         
                     </div>
                 </div>
-                <div class="third-project project-secondary">
+                <div class="third-project project-secondary bg-img">
                     <div>
                         <a href="#">
                             <h2>TBD</h2>
@@ -77,7 +77,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="fourth-project project-secondary">
+                <div class="fourth-project project-secondary bg-img">
                     <div>
                         <a href="#">
                             <h2>TBD</h2>
@@ -85,7 +85,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="fifth-project project-secondary">
+                <div class="fifth-project project-secondary bg-img">
                     <div>
                         <a href="#">
                             <h2>TBD</h2>
@@ -99,12 +99,12 @@
     <!-- CONTACT ME SECTION -->
     <footer id="contact-me" class="container">
         <div>
-            <h2 class="title">Contact <br> Me</h2>
+            <h2 class="title">Contact Me</h2>
         </div>
         <nav class="container-info contacts">
             <ul>
                 <li><a href="tel.512.992.9057">(512) 992-9057</a></li>
-                <li><a href="mailto://taylorkeltgen@gmail.com">taylorkeltgen@gmail.com</a></li>
+                <li><a href="mailto:taylorkeltgen@gmail.com">taylorkeltgen@gmail.com</a></li>
                 <li><a href="https://github.com/" target="_blank">GitHub</a></li>
                 <li><a href="https://twitter.com/" target="_blank">Socials</a></li>
             </ul>
