github link update

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <ul>
                 <li><a href="tel.512.992.9057">(512) 992-9057</a></li>
                 <li><a href="mailto:taylorkeltgen@gmail.com">taylorkeltgen@gmail.com</a></li>
-                <li><a href="https://github.com/" target="_blank">GitHub</a></li>
+                <li><a href="https://github.com/taylorkeltgen/portfolio" target="_blank">GitHub</a></li>
                 <li><a href="https://twitter.com/" target="_blank">Socials</a></li>
             </ul>
         </nav>
