--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
                 </div>
                 <div class="third-project project-secondary bg-img">
                     <div>
-                        <a href="#">
-                            <h2>TBD</h2>
-                            <p>Pending</p>
+                        <a href="https://smashercoder.github.io/hotel-raven/">
+                            <h2>Hotel Raven</h2>
+                            <p>Coding Bootcamp Group Project #1</p>
                         </a>
                     </div>
                 </div>
