added Group Project 2 to site

--- a/index.html
+++ b/index.html
@@ -1,114 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Portfolio - Taylor Keltgen</title>
-</head>
-<body>
+  </head>
+  <body>
     <!-- HEADER & NAV -->
     <header>
-        <h1>Portfolio</h1>
-        <nav>
-            <ul>
-                <li><a href="#about-me">About Me</a></li>
-                <li><a href="#my-work">My Work</a></li>
-                <li><a href="#contact-me">Contact Me</a></li>
-                <li><a href="#">Resume</a></li>
-            </ul>
-        </nav>
-    </header>  
+      <h1>Portfolio</h1>
+      <nav>
+        <ul>
+          <li><a href="#about-me">About Me</a></li>
+          <li><a href="#my-work">My Work</a></li>
+          <li><a href="#contact-me">Contact Me</a></li>
+          <li><a href="#">Resume</a></li>
+        </ul>
+      </nav>
+    </header>
 
     <!-- HERO BANNER -->
     <section class="hero">
-        <h1>Taylor Keltgen</h1>
+      <h1>Taylor Keltgen</h1>
     </section>
 
     <!-- ABOUT ME SECTION -->
     <section id="about-me" class="container">
+      <div>
+        <h2 class="title">About Me</h2>
+      </div>
+      <div class="container-info">
         <div>
-            <h2 class="title">About Me</h2>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe
+            atque sapiente cupiditate laborum laudantium itaque, eligendi non ad
+            consequatur illo soluta commodi quis eaque! Nostrum consequuntur
+            aperiam impedit tempora minima! Lorem, ipsum dolor sit amet
+            consectetur adipisicing elit. Nisi illo non quaerat, doloribus porro
+            cupiditate, commodi itaque amet, ducimus rerum voluptatem est odit
+            eius veritatis labore numquam? Itaque, et nisi.
+          </p>
+          <br />
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe
+            atque sapiente cupiditate laborum laudantium itaque, eligendi non ad
+            consequatur illo soluta commodi quis eaque! Nostrum consequuntur
+            aperiam impedit tempora minima! Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Magnam dignissimos cumque molestiae
+            dolore. In iste eius vel facere, id dicta expedita fuga maiores
+            libero. Delectus voluptatum numquam architecto! Consectetur, soluta.
+          </p>
         </div>
-        <div class="container-info">
-            <div>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe atque sapiente cupiditate laborum laudantium itaque, eligendi non ad consequatur illo soluta commodi quis eaque! Nostrum consequuntur aperiam impedit tempora minima! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi illo non quaerat, doloribus porro cupiditate, commodi itaque amet, ducimus rerum voluptatem est odit eius veritatis labore numquam? Itaque, et nisi.</p>
-                <br>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe atque sapiente cupiditate laborum laudantium itaque, eligendi non ad consequatur illo soluta commodi quis eaque! Nostrum consequuntur aperiam impedit tempora minima! Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam dignissimos cumque molestiae dolore. In iste eius vel facere, id dicta expedita fuga maiores libero. Delectus voluptatum numquam architecto! Consectetur, soluta.</p>
-            </div>
-            <div>
-                <img src="./assets/images/20210810_174803.jpg" alt="portrait of Taylor"
-                width="800px"
-                >
-            </div>
+        <div>
+          <img
+            src="./assets/images/20210810_174803.jpg"
+            alt="portrait of Taylor"
+            width="800px"
+          />
         </div>
+      </div>
     </section>
 
     <!-- MY WORK SECTION -->
     <section id="my-work" class="container">
+      <div>
+        <h2 class="title">My Work</h2>
+      </div>
+      <div class="work-info">
+        <div class="first-project project-main bg-img">
+          <div>
+            <a
+              href="https://taylorkeltgen.github.io/run-buddy/"
+              target="_blank"
+            >
+              <h2>Run Buddy</h2>
+              <p>HTML / CSS</p>
+            </a>
+          </div>
+        </div>
         <div>
-            <h2 class="title">My Work</h2>
-        </div>
-        <div class="work-info">
-            <div class="first-project project-main bg-img">
-                <div>
-                    <a href="https://taylorkeltgen.github.io/run-buddy/" target="_blank">
-                        <h2>Run Buddy</h2>
-                        <p>HTML / CSS</p>
-                    </a>
-                </div>
-            </div>
+          <div class="second-project project-secondary bg-img">
             <div>
-                <div class="second-project project-secondary bg-img">
-                    <div>
-                        <a href="https://taylorkeltgen.github.io/robot-gladiators/" target="_blank">
-                            <h2>Robot Gladiator</h2>
-                            <p>JavaScript</p>
-                        </a>
-                        
-                    </div>
-                </div>
-                <div class="third-project project-secondary bg-img">
-                    <div>
-                        <a href="https://smashercoder.github.io/hotel-raven/">
-                            <h2>Hotel Raven</h2>
-                            <p>Coding Bootcamp Group Project #1</p>
-                        </a>
-                    </div>
-                </div>
-                <div class="fourth-project project-secondary bg-img">
-                    <div>
-                        <a href="#">
-                            <h2>TBD</h2>
-                            <p>Pending</p>
-                        </a>
-                    </div>
-                </div>
-                <div class="fifth-project project-secondary bg-img">
-                    <div>
-                        <a href="#">
-                            <h2>TBD</h2>
-                            <p>Pending</p>
-                        </a>
-                    </div>
-                </div>
+              <a
+                href="https://taylorkeltgen.github.io/robot-gladiators/"
+                target="_blank"
+              >
+                <h2>Robot Gladiator</h2>
+                <p>JavaScript</p>
+              </a>
             </div>
+          </div>
+          <div class="third-project project-secondary bg-img">
+            <div>
+              <a href="https://smashercoder.github.io/hotel-raven/">
+                <h2>Hotel Raven</h2>
+                <p>Coding Bootcamp Group Project #1</p>
+              </a>
+            </div>
+          </div>
+          <div class="fourth-project project-secondary bg-img">
+            <div>
+              <a href="https://want-to-buy.herokuapp.com/">
+                <h2>Want To Buy</h2>
+                <p>Coding Bootcamp Group Project #2</p>
+              </a>
+            </div>
+          </div>
+          <div class="fifth-project project-secondary bg-img">
+            <div>
+              <a href="#">
+                <h2>TBD</h2>
+                <p>Pending</p>
+              </a>
+            </div>
+          </div>
         </div>
+      </div>
     </section>
     <!-- CONTACT ME SECTION -->
     <footer id="contact-me" class="container">
-        <div>
-            <h2 class="title">Contact Me</h2>
-        </div>
-        <nav class="container-info contacts">
-            <ul>
-                <li><a href="tel.512.992.9057">(512) 992-9057</a></li>
-                <li><a href="mailto:taylorkeltgen@gmail.com">taylorkeltgen@gmail.com</a></li>
-                <li><a href="https://github.com/taylorkeltgen/portfolio" target="_blank">GitHub</a></li>
-                <li><a href="https://twitter.com/" target="_blank">Socials</a></li>
-            </ul>
-        </nav>
+      <div>
+        <h2 class="title">Contact Me</h2>
+      </div>
+      <nav class="container-info contacts">
+        <ul>
+          <li><a href="tel.512.992.9057">(512) 992-9057</a></li>
+          <li>
+            <a href="mailto:taylorkeltgen@gmail.com">taylorkeltgen@gmail.com</a>
+          </li>
+          <li>
+            <a href="https://github.com/taylorkeltgen/portfolio" target="_blank"
+              >GitHub</a
+            >
+          </li>
+          <li><a href="https://twitter.com/" target="_blank">Socials</a></li>
+        </ul>
+      </nav>
     </footer>
-</body>
+  </body>
 </html>
